--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,8 @@
    # F-Key by thecatisbest
 
-   # Action Commands
-   # 同時蹲下和切換左右手(F)時要執行的指令 (使用;分隔多個指令(請不要多出空格))
+   # Use Sneak(Swift) + (F) key to execute commands (Use ; to make multi Commands (please don't add spaces) )
    # Player ID Placeholder: %player%
 commands: "say hi;say I'm %player%"
 
-   # Cancel Swap
-   # 是否取消切換到副手的動作
+   # Change the swap action
 cancel_swap: true
