--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me</groupId>
     <artifactId>FKey</artifactId>
-    <version>1.0.1-BETA</version>
+    <version>1.1-RELEASE</version>
     <packaging>jar</packaging>
 
     <name>F-Key</name>
